--- a/Unreal/CarlaUE4/Config/DefaultGame.ini
+++ b/Unreal/CarlaUE4/Config/DefaultGame.ini
@@ -61,6 +61,7 @@ bSkipEditorContent=False
 +MapsToCook=(FilePath="/Game/Carla/Maps/Town05_Opt")
 +MapsToCook=(FilePath="/Game/Carla/Maps/Town10HD")
 +MapsToCook=(FilePath="/Game/Carla/Maps/Town10HD_Opt")
++MapsToCook=(FilePath="/Game/Carla/Maps/Town12/Town12")
 +MapsToCook=(FilePath="/Game/Carla/Maps/OpenDriveMap")
 +MapsToCook=(FilePath="/Game/Carla/Maps/TestMaps/EmptyMap")
 +DirectoriesToAlwaysCook=(Path="Carla/Static/GenericMaterials/Licenseplates/Textures")
@@ -68,6 +69,8 @@ bSkipEditorContent=False
 +DirectoriesToAlwaysStageAsUFS=(Path="Carla/Maps/OpenDrive")
 +DirectoriesToAlwaysStageAsUFS=(Path="Carla/Maps/Nav")
 +DirectoriesToAlwaysStageAsUFS=(Path="Carla/Maps/TM")
++DirectoriesToAlwaysStageAsUFS=(Path="Carla/Maps/Town12/OpenDrive")
++DirectoriesToAlwaysStageAsUFS=(Path="Carla/Maps/Town12/TM")
 +DirectoriesToAlwaysStageAsUFS=(Path="Carla/Config")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
